@startuml
title Aplicativos de gerenciamento de músicas e artistas

class Usuario {
    - nome:  string
    - senha: string
    + cadastrar_usuario(nome, senha,)
}


class Musica{
    - nome: string
    - duracao: int
    - genero: string
    - artista: Artista
    - album: Album
    + cadastrar_musica(nome, duracao, genero, artista, album)
}

class Album{
    - nome: string
    - ano_de_lancamento: int
    - tempo_de_duracao:string
    + cadastrar_album(nome)
}

class Comentario{
- musica: Musica
- artista: Artista
- comentario: String
+ mandar_comentario(musica, artista, comentario)
}

class Artista{
- nome: string
- pais: string
- segmento: string
+ cadastrar_artista(nome, pais, segmento)
}
 
Musica *-- Artista
Album --* Musica
Musica --* Comentario
Usuario --* Comentario
@enduml